[Scrollable] fix horizontal scroll bar styles

--- a/src/Scrollable/Scrollable.css
+++ b/src/Scrollable/Scrollable.css
@@ -1,4 +1,5 @@
 .root::-webkit-scrollbar {
+  height: 4px;
   width: 4px;
 }
 
